2001-04-15  Keisuke Nishida  <kxn30@po.cwru.edu>

	* boot-9.scm (defmacro, define-macro, define-syntax-macro):
	Define only at the top level.

2001-04-06  Thien-Thi Nguyen  <ttn@revel.glug.org>

	* threads.scm: Update copyright.

	Use `export' and `export-syntax' instead of
	`define-public' and `defmacro-public'.

	(make-thread): Rename first arg to `proc'; nfc.
	(begin-thread, monitor): Rename second arg to `rest'; nfc.
	(with-mutex): Rename second arg to `body'; nfc.

2001-04-06  Neil Jerram  <neil@ossau.uklinux.net>

	* boot-9.scm (warn-autoload-deprecation): Close parenthesis in
	"You just tried to autoload ..." message.

2001-04-05  Keisuke Nishida  <kxn30@po.cwru.edu>

	* Makefile.am (ice9_sources): Add history.scm.
	* history.scm: Create the module (value-history) at the beginning.

2001-03-29  Marius Vollmer  <mvo@zagadka.ping.de>

	* boot-9.scm (init-dynamic-module): Fix typo in call to
	warn-autoload-deprecation.  I feel silly.

2001-03-27  Marius Vollmer  <mvo@zagadka.ping.de>

	* r4rs.scm (call-with-values): New definition, defers to
	@call-with-values.

2001-03-26  Marius Vollmer  <mvo@zagadka.ping.de>

	* boot-9.scm (warn-autoload-deprecation): New function.
	(init-dynamic-module): Use it here to print warning.  Only give
	warning when a module has actually been found.

2001-03-25  Marius Vollmer  <mvo@zagadka.ping.de>

	* boot-9.scm (init-dynamic-module): Issue warning about
	auto-loading of compiled code modules being deprecated.

	* Makefile.am (ice9_sources): Added "time.scm".

2001-03-20  Keisuke Nishida  <kxn30@po.cwru.edu>

	* time.scm (time): Reimplemented as a procedure call.
	(Thanks to Marius Vollmer)

2001-03-20  Keisuke Nishida  <kxn30@po.cwru.edu>

	* safe-r5rs.scm (list): Export.

2001-03-17  Keisuke Nishida  <kxn30@po.cwru.edu>

	* boot-9.scm (before-eval-hook, after-eval-hook,
	before-print-hook, after-print-hook): New hooks.
	(scm-style-repl): Call these hooks.

	* history.scm: New file.
